cmake_minimum_required(VERSION 3.0)
project(learnOpengl)

option(GLFW_BUILD_DOCS OFF)
option(GLFW_BUILD_EXAMPLES OFF)
option(GLFW_BUILD_TESTS OFF)
add_subdirectory(Vendor/glfw)

option(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
option(ASSIMP_BUILD_SAMPLES OFF)
option(ASSIMP_BUILD_TESTS OFF)
add_subdirectory(Vendor/assimp)

option(BUILD_BULLET2_DEMOS OFF)
option(BUILD_CPU_DEMOS OFF)
option(BUILD_EXTRAS OFF)
option(BUILD_OPENGL3_DEMOS OFF)
option(BUILD_UNIT_TESTS OFF)
add_subdirectory(Vendor/bullet)

set(GLAD_PROFILE "core")
set(GLAD_SPEC "gl")
set(GLAD_API "gl=4.1")
set(GLAD_GENERATOR "c")
set(GLAD_EXPORT ON)
add_subdirectory(Vendor/glad)

macro(SUBDIRLIST result dir)
file(GLOB children RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${dir}/*)
set(dirlist "")
foreach(child ${children})
if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${child})
list(APPEND dirlist ${child})
endif()
endforeach()
set(${result} ${dirlist})
endmacro()

SUBDIRLIST(SUBDIRS Demo)
foreach(subdir ${SUBDIRS})
add_subdirectory(${subdir})
endforeach()
